--- a/player3/style.css
+++ b/player3/style.css
@@ -25,36 +25,42 @@ body {
     width: 150px;
   }
   
+  .button-group {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  
+  .btn-switch {
+    padding: 10px 16px;
+    background-color: rgb(0, 255, 179);
+    color: white;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background 0.3s ease;
+  }
+  
+  .btn-switch:hover {
+    background-color: rgb(0, 255, 179);
+  }
+  
   button {
     padding: 10px 16px;
     font-size: 16px;
     border: none;
     border-radius: 8px;
-    background-color: #1abc9c;
+    background-color: rgb(0, 255, 179);
     color: white;
     cursor: pointer;
-    margin: 5px;
     transition: 0.3s ease;
   }
   
   button:hover {
-    background-color: #16a085;
-  }
-
-  .btn-switch {
-    display: inline-block;
-    padding: 10px 16px;
-    background-color: #27ae60;
-    color: white;
-    border-radius: 8px;
-    margin-left: 10px;
-    text-decoration: none;
-    transition: background 0.3s ease;
-  }
-  
-  .btn-switch:hover {
-    background-color: #1e8449;
-  }
+    background-color: rgb(0, 255, 179);
+  }  
   
   
   .reset {
